--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'RC'
 - !lcsh 'Tobacco use'
+- GITenberg
 title: 'Vanity, All Is Vanity: A Lecture on Tobacco and its effects'
 url: http://www.gutenberg.org/ebooks/18935
